fix button on mobile

--- a/private/src/styles/components/_back-to-top.scss
+++ b/private/src/styles/components/_back-to-top.scss
@@ -14,4 +14,9 @@
   &.hidden {
     visibility: hidden;
   }
+
+  @media (max-width: $container-md) {
+    bottom: 10px;
+    right: 10px;
+  }
 }
